--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 language: ruby
 rvm:
-- "2.0.0"
-- "1.8.7"
-- "1.9.2"
-- "1.9.3"
-- jruby-18mode # JRuby in 1.8 mode
-- jruby-19mode # JRuby in 1.9 mode
-- rbx-18mode
-- rbx-19mode
-# uncomment this line if your project needs to run something other than `rake`:
-# # script: bundle exec rspec spec
-# inside a repository with .travis.yml
-travis-lint
-#
-# # from any directory
-travis-lint [path to your .travis.yml]
+- 2.0.0
+bundler_args: --without development production
+before_install:
+- gem install bundler
+before_script:
+- cp config/database.yml.travis config/database.yml
+- bundle exec rake db:create db:migrate RAILS_ENV=test
+script:
+- bundle exec rake test
