--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: ruby
 rvm:
 - 2.0.0
+- "1.9.3"
+- "1.9.2"
+- jruby-19mode
+- rbx-19mode
+- jruby-18mode
+- "1.8.7"
 gemfile:
 - Gemfile
-bundler_args: --without development production
 before_install:
 - gem install bundler
-before_script:
-- cp config/database.yml.travis config/database.yml
-- bundle exec rake db:create db:migrate RAILS_ENV=test
 script:
 - bundle exec rake test
