--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ gemfile:
 - Gemfile
 before_install:
 - gem install bundler
+before_script:
+- cp config/database.yml.travis config/database.yml
+- bundle exec rake db:create db:migrate RAILS_ENV=test
 script:
 - bundle exec rake test
