[search_#4] add brewery example to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
 - 2.0.0
 before_script:
 - cp config/database.yml.travis config/database.yml
+- cp config/brewery_db.yml.example config/brewery_db.yml 
 - bundle exec rake db:create db:migrate RAILS_ENV=test
 script:
 - bundle exec rspec spec
